@@ -1139,6 +1139,29 @@ log_timestamp_format %Y-%m-%dT%H:%M:%S
 			<title>General Options</title>
 			<variablelist>
 				<varlistentry>
+					<term><option>accepted_protocol_versions</option> <replaceable>versions</replaceable></term>
+					<listitem>
+						<para>
+                            Accepted protocol versions. This sets what versions
+                            of the MQTT protocol will be accepted on this
+                            listener. Can be any combination of 3, 4, 5 in a
+                            comma separated list, e.g.
+						</para>
+						<programlisting>
+# Allow v5.0 only:
+listener 1883
+accept_protocol_versions 5
+
+# Allow v3.1 and v3.1.1:
+listener 1884
+accept_protocol_versions 3, 4</programlisting>
+						<para>
+							Defaults to allowing all versions.
+						</para>
+						<para>Reloaded on reload signal.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
 					<term><option>bind_address</option> <replaceable>address</replaceable></term>
 					<listitem>
 						<para>This option is deprecated and will be removed in a
