@@ -296,6 +296,21 @@
 # cafile, certfile, keyfile, ciphers, and ciphers_tls13 options are supported.
 #protocol mqtt
 
+# Accepted protocol versions. This sets what versions of the MQTT protocol will
+# be accepted on this listener. Can be any combination of 3, 4, 5 in a comma
+# separated list, e.g.
+#
+# # Allow v5.0 only:
+# listener 1883
+# accept_protocol_versions 5
+#
+# # Allow v3.1 and v3.1.1:
+# listener 1884
+# accept_protocol_versions 3, 4
+#
+# Defaults to allowing all versions.
+#accept_protocol_versions 3,4,5
+
 # Set use_username_as_clientid to true to replace the clientid that a client
 # connected with with its username. This allows authentication to be tied to
 # the clientid, which means that it is possible to prevent one client
