@@ -24,6 +24,7 @@ msg_sequence_test:
 
 01 :
 	./01-connect-575314.py
+	./01-connect-accept-protocol.py
 	./01-connect-allow-anonymous.py
 	./01-connect-disconnect-v5.py
 	./01-connect-global-max-clients.py
