@@ -6,6 +6,7 @@ import ptest
 tests = [
     #(ports required, 'path'),
     (1, './01-connect-575314.py'),
+    (1, './01-connect-accept-protocol.py'),
     (1, './01-connect-allow-anonymous.py'),
     (1, './01-connect-disconnect-v5.py'),
     (1, './01-connect-global-max-clients.py'),
