@@ -58,8 +58,10 @@ Broker:
 - Add `mosquitto_client_port()` function for plugins.
 - Add `global_max_clients` option to allow limiting client sessions globally
   on the broker.
-- Add `global_max_connections` option to allow limiting client onnections globally
+- Add `global_max_connections` option to allow limiting client connections globally
   on the broker.
+- Add `accept_protocol_versions` option to allow limiting which MQTT protocol
+  versions are allowed for a particular listener.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
